<resources>
    <string name="app_name">지금집밥</string>
    <string name="home">홈</string>
    <string name="meetUpMap">지도</string>
    <string name="setting">내 정보</string>
    <string name="recruit_app_bar">모임 등록</string>
    <string name="title_image">대표 사진</string>
    <string name="first_chip">파스타</string>
    <string name="second_chip">찌개</string>
    <string name="third_chip">백반</string>
    <string name="fourth_chip">구이</string>
    <string name="fifth_chip">떡볶이</string>
    <string name="sixth_chip">샌드위치</string>
    <string name="seventh_chip">베이커리</string>
    <string name="eighth_chip">전</string>
    <string name="nineth_chip">기타</string>
    <string name="party_name">모임 이름</string>
    <string name="count_people">참여 인원수</string>
    <string name="count_9">최대 9명</string>
    <string name="person_cost">1인당 비용</string>
    <string name="cost_ex">최대 99,999원</string>
    <string name="location_ex">모임 위치</string>
    <string name="party_date">모임 시간</string>
    <string name="date_ex">2024.05.24</string>
    <string name="time_ex">00시00분</string>
    <string name="make_food">만들 음식</string>
    <string name="detail_answer">자세한 설명</string>
    <string name="des_text">내용</string>
    <string name="complete_text">작성 완료</string>
    <string name="name_text">이름</string>
    <string name="notify_notification">알림</string>
    <string name="nick_name">닉네임</string>
    <string name="birthday">Birth of date</string>
    <string name="password">Password</string>
    <string name="register_check">회원가입 및 이용약관에 동의하겠습니까?</string>
    <string name="register_text">회원가입</string>
    <string name="password_english">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password_compare">PasswordCompare</string>
    <string name="remember_id">Remember id</string>
    <string name="login_text">로그인</string>
    <string name="profile_edit_app_bar">프로필 수정</string>
    <string name="edit_done">수정 완료</string>
    <string name="message_when_edit_nickname_fail">닉네임 변경에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="message_when_edit_profile_image_fail">프로필 이미지 변경에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="profile_app_bar">프로필</string>
    <string name="header_for_temperature"><u>매너온도</u></string>
    <string name="edit_profile">프로필 수정</string>
    <string name="meet_count_header">모임 횟수</string>
    <string name="profile_distinguish_format_8">#%1$.8s</string>
    <string name="temperature_format">%1$.1f°C</string>
    <string name="header_for_gallery">모임 사진</string>
    <string name="add_image">사진 등록하기</string>
    <string name="post_order_format">%1$d / %2$d</string>
    <string name="temperature_instruction">매너온도는 사용자로부터 받은 평가를 반영해서 만든 매너 지표입니다.</string>
    <string name="default_temperature_instruction">첫 온도 36.5°C</string>
    <string name="setting_app_bar">설정</string>
    <string name="login">로그인</string>
    <string name="nonmember">비회원</string>
    <string name="logout">로그아웃</string>
    <string name="register">회원가입</string>
    <string name="unregister">회원탈퇴</string>
    <string name="header_for_setting_row">앱 설정</string>
    <string name="header_for_etc_row">기타</string>
    <string name="version_format">Version %1$s</string>
    <string name="setting_profile_row_title">프로필 수정</string>
    <string name="setting_profile_row_description">프로필을 수정합니다.</string>
    <string name="setting_verification_row_title">본인 인증</string>
    <string name="setting_verification_row_description">이메일, 휴대폰 본인 인증을 합니다.</string>
    <string name="setting_meeting_row_title">모임</string>
    <string name="setting_meeting_row_description">참가중인 모임과 참여했던 모임을 확인합니다.</string>
    <string name="setting_alert_row_title">알림 설정</string>
    <string name="setting_alert_row_description">개별적인 알림을 설정합니다.</string>
    <string name="setting_privacy_policy_row_title">개인정보 처리방침</string>
    <string name="setting_privacy_policy_row_description">개인정보 처리방침을 확인합니다.</string>
    <string name="setting_version_row_title">버전</string>
    <string name="message_when_log_out_success">로그아웃 처리되었습니다.</string>
    <string name="message_when_log_out_fail">로그아웃에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="message_when_sign_out_fail">회원 탈퇴에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="message_when_sign_out_success">회원 탈퇴 처리 되었습니다.</string>
    <string name="sign_out_dialog_title">회원 탈퇴 안내</string>
    <string name="sign_out_dialog_message">정말 회원 탈퇴를 하시겠습니까?</string>
    <string name="sign_out_dialog_neutral">취소</string>
    <string name="sign_out_dialog_positive">예</string>
    <string name="image_permission_title">이미지 권한 안내</string>
    <string name="image_permission_message">갤러리에 있는 이미지에 접근하려면 저장소 권한이 필요합니다.</string>
    <string name="image_permission_negative">허용 안함</string>
    <string name="image_permission_positive">허용</string>
    <string name="description_for_full_access_image_permission">지금 모든 사진 접근 권한을 허용하면 더 쉽고 편하게 사진을 올릴 수 있어요.</string>
    <string name="request_image_permission">사진 권한 변경</string>
    <string name="image_permission_all">모든 사진에 대한 접근 권한 허용</string>
    <string name="image_permission_partial">더 많은 사진 선택</string>
    <string name="profile_image_select_app_bar">이미지 선택</string>
    <string name="home_search_hint">검색어를 입력하세요.</string>
    <string name="home_my_meet_title">다가오는 모임</string>
    <string name="home_food_menu_title">메뉴 별로 모임을 찾아줄게요!</string>
    <string name="home_cost_title">금액에 따른 모임을 찾아줄게요!</string>
    <string name="home_my_meet_empty">현재 모임이 없어요</string>
    <string name="login_email">이메일</string>
    <string name="login_password">비밀번호</string>
    <string name="login_header_for_signup">계정이 없으신가요?</string>
    <string name="login_signup">회원가입</string>
    <string name="login_remember">이메일 기억하기</string>
    <string name="signup_name">닉네임</string>
    <string name="signup_birth_date">Birth_date</string>
    <string name="signup_email">이메일</string>
    <string name="signup_password">비밀번호</string>
    <string name="signup_compare_password">비밀번호 확인</string>
    <string name="signup_agree">회원가입 및 이용약관에 동의 하시겠습니까?</string>
    <string name="signup_helper_text">%1$d ~ %2$d글자 이내로 입력해주세요.</string>
    <string name="signup_duplicate_email">이미 가입된 이메일입니다.</string>
    <string name="signup_fail">회원가입에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="signup_email_format_not_correct">이메일 양식에 맞게 입력해주세요.</string>
    <string name="signup_password_compare_not_correct">비밀번호가 일치하지 않습니다.</string>
    <string name="meeting_info_location_tag">장소</string>
    <string name="meeting_info_count">%d / %d명</string>
    <string name="meeting_info_cost">%,d원</string>
    <string name="input_cost_empty_text">모임이 없어요.</string>
    <string name="meeting_management_people_count">인원수: %d/%d명</string>
    <string name="meeting_management_location">장소: %s</string>
    <string name="meeting_management_time">시간: %s</string>
    <string name="meeting_management_main_menu">주 메뉴: %s</string>
    <string name="meeting_management_cost">가격: %,d원</string>
    <string name="user_document_id_instruction">계정 삭제 요청 시 사용하는 고유번호입니다.</string>
    <string name="text_for_delete_request_url"><u>삭제 요청 바로가기</u></string>
    <string name="text_for_delete_request_title"><u>삭제 요청 주소</u></string>
    <string name="label_user_document_id">사용자 고유 식별 번호</string>
    <string name="user_document_id_is_copied">사용자 고유 식별 번호가 복사되었습니다.</string>
    <string name="meeting_list_title">내 모임 보기</string>
    <string name="meeting_list_item_review_text">리뷰하러 가기</string>
    <string name="meeting_list_coming">참여중인 모임</string>
    <string name="meeting_list_end">종료된 모임</string>
    <string name="input_food_category_empty_test">모임이 없어요.</string>
    <string name="post_image_select_min_select_item">한 개 이상의 이미지를 선택해주세요.</string>
    <string name="message_when_uploading_image_post_start">서버에 게시물 업로드를 시작합니다.</string>
    <string name="header_for_selected_image">선택된 사진</string>
    <string name="progress">%1$d/%2$d</string>
    <string name="message_when_uploading_post_fail">포스트 업로드에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="meeting_management_host_title">호스트</string>
    <string name="meeting_management_members_title">참여 멤버</string>
    <string name="meeting_management_empty_text">참여 멤버가 없습니다.</string>
    <string name="search_search_hint">검색어를 입력하세요.</string>
    <string name="do_report"><u>신고하기</u></string>
    <string name="report_done">신고가 완료됐습니다.</string>
    <string name="report_fail">신고에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="signup_password_min_edittext">최소 5자 이상으로 적어주세요!!</string>
    <string name="location_edittext">주소를 정확하게 적어주세요!!</string>
    <string name="search_tv">검색</string>
    <string name="delete_post_dialog_title">게시물 삭제 안내</string>
    <string name="delete_post_dialog_message">정말 게시물을 삭제 하시겠습니까?</string>
    <string name="delete_post_dialog_neutral">취소</string>
    <string name="delete_post_dialog_positive">예</string>
    <string name="delete_post_fail">게시물 삭제에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="delete_post_done">게시물 삭제가 완료됐습니다.</string>
    <string name="delete_post">삭제하기</string>
    <string name="meeting_member_list_header">참여 멤버</string>
    <string name="meet_up_map_no_permission">지도 사용을 위해 위치 권한을 허용해주세요(필수권한)</string>
    <string name="meet_up_map_set_permission">설정으로 이동</string>
    <string name="meet_up_map_nickname">%s님</string>
    <string name="meet_up_map_price">%,d원</string>
    <string name="meet_up_map_recruits">%d/%d명</string>
    <string name="meet_up_map_main_menu">메인메뉴 : %s</string>
    <string name="meet_up_map_cost_by_person">1인당 비용 : %,d원</string>
    <string name="meet_up_map_go_meeting_info">모임 보러 가기 -></string>
    <string name="home_my_meeting_empty_text">현재 참여 중인 모임이 없어요.</string>
    <string name="login_fail">이메일 또는 비밀번호를 확인해주세요.</string>
    <string name="not_yet_implemented">이 기능은 업데이트 예정입니다.</string>
    <string name="setting_location_policy_row_title">위치정보 이용약관</string>
    <string name="setting_location_policy_row_description">위치정보 이용약관을 확인합니다.</string>
    <string name="search_empty_text">모임이 없어요.</string>
    <string name="done">완료</string>
    <string name="signup_compare_text">비밀번호를 다시한번 입력해주세요!</string>
    <string name="recruit_default_image"><![CDATA[https://firebasestorage.googleapis.com/v0/b/food-879fc.appspot.com/o/dummy%2F30120875_7640343.jpg?alt=media&token=eee9fbba-8544-451f-857b-c0bea1b2e768]]></string>
    <string name="not_yet_loaded">%1$s가(이) 아직 로딩 되지 않았습니다. 인터넷 연결 상태를 확인해주세요.</string>
    <string name="user_info">사용자 정보</string>
    <string name="sign_out_is_not_allowed">회원 탈퇴가 허용되지 않은 계정입니다.</string>
    <string name="before">이전</string>
    <string name="next">다음</string>
    <string name="location_and_date_header">모임 장소와 날짜를 설정해주세요</string>
    <string name="location_header">장소</string>
    <string name="recruit_location_hint">도로명 주소 검색</string>
    <string name="date_header">날짜</string>
    <string name="recruit_date_hint">날짜 선택하기</string>
    <string name="time_header">시간</string>
    <string name="recruit_time_hint">시간 선택하기</string>
    <string name="verification_app_bar">본인 인증</string>
    <string name="hint_for_email_address">이메일 주소</string>
    <string name="get_email_verification">인증 메일 받기</string>
    <string name="hint_for_verification_code">인증 번호</string>
    <string name="verification_confirm">확인하기</string>
    <string name="verify_mail_app_bar">이메일 인증</string>
    <string name="verify_email_header">이메일을 입력해주세요</string>
    <string name="verification_email">이메일</string>
    <string name="verification_change">변경</string>
    <string name="verification_phone">휴대폰 번호</string>
    <string name="verification_register">등록</string>
    <string name="verify_phone_app_bar">휴대폰 인증</string>
    <string name="verify_phone_header">전화번호를 입력해주세요</string>
    <string name="hint_for_phone">전화번호</string>
    <string name="check_email_verification_status">인증 상태 갱신</string>
    <string name="get_phone_verification">인증 번호 받기</string>
</resources>