<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recruitment.viewpager.locationanddate.LocationAndDateFragment">

    <TextView
        android:id="@+id/tv_header"
        style="@style/header_title20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin16"
        android:text="@string/location_and_date_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_location_header"
        style="@style/body_content16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin16"
        android:text="@string/location_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header" />

    <Button
        android:id="@+id/btn_location"
        style="@style/OutlineSquareButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin12"
        android:text="@string/recruit_location_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location_header" />

    <TextView
        android:id="@+id/tv_date_header"
        style="@style/body_content16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin16"
        android:text="@string/date_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_location" />

    <Button
        android:id="@+id/btn_date"
        style="@style/OutlineSquareButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin12"
        android:text="@string/recruit_date_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date_header" />

    <TextView
        android:id="@+id/tv_time_header"
        style="@style/body_content16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin16"
        android:text="@string/time_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_date" />

    <Button
        android:id="@+id/btn_time"
        style="@style/OutlineSquareButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin12"
        android:text="@string/recruit_time_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_time_header" />

</androidx.constraintlayout.widget.ConstraintLayout>