<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.verification.email.VerifyEmailFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mt"
            style="@style/AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/verify_mail_app_bar"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_header"
        style="@style/header_title20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin16"
        android:text="@string/verify_email_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin16"
        android:hint="@string/hint_for_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@id/btn_email_verification_code" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_email_verification_code"
        style="@style/SquareButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin16"
        android:layout_marginBottom="@dimen/default_margin16"
        android:enabled="false"
        android:text="@string/get_email_verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email" />

    <Button
        android:id="@+id/btn_check_verification_status"
        style="@style/SquareButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin16"
        android:layout_marginBottom="@dimen/default_margin16"
        android:text="@string/check_email_verification_status"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_email_verification_code"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>