<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.verification.phone.VerifyPhoneFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mt"
            style="@style/AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/verify_phone_app_bar"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_header"
        style="@style/header_title20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin16"
        android:text="@string/verify_phone_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone_address"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin16"
        android:hint="@string/hint_for_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_phone_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:nextFocusForward="@id/btn_send_verification_code" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send_verification_code"
        style="@style/SquareButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin16"
        android:layout_marginBottom="@dimen/default_margin16"
        android:text="@string/get_phone_verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_phone_address" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone_verification_code"
        style="@style/TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin16"
        android:hint="@string/hint_for_verification_code"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_send_verification_code"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_phone_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:nextFocusForward="@id/btn_phone_verification_confirm" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_phone_verification_confirm"
        style="@style/SquareButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin20"
        android:layout_marginTop="@dimen/default_margin16"
        android:layout_marginBottom="@dimen/default_margin16"
        android:text="@string/verification_confirm"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_phone_verification_code"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>