<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recruitment.RecruitmentFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mt"
            style="@style/AppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_close_24"
            app:title="@string/recruit_app_bar"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/default_margin24"
        app:layout_constraintBottom_toTopOf="@id/rv_step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abl" />

    <!--  ItemDecoration을 이용해 양쪽에 8dp를 설정하므로, marginHorizontal을 12dp로 설정함  -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_step"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin12"
        android:layout_marginBottom="@dimen/default_margin16"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:spanCount="6"
        tools:itemCount="6"
        tools:listitem="@layout/item_recruit_step" />

    <Button
        android:id="@+id/btn_before"
        style="@style/SquareButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin20"
        android:layout_marginBottom="@dimen/default_margin16"
        android:backgroundTint="@color/clr_EDF1F3"
        android:text="@string/before"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_next"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_next"
        style="@style/SquareButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin20"
        android:layout_marginBottom="@dimen/default_margin16"
        android:enabled="false"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@id/btn_before" />

</androidx.constraintlayout.widget.ConstraintLayout>